index page title fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
-title: Damai Kasih Channel
+title: Reaksi Apologetik Katolik terhadap kesesatan
+indexTitle: Damai Kasih Channel
 subtitle: Ad Maiorem Dei Gloriam
 ---
