luther on virgin mary

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@ layout: home
 title: Reaksi Apologetik Katolik terhadap kesesatan
 indexTitle: Damai Kasih Channel
 subtitle: Ad Maiorem Dei Gloriam
+url: "/"
 ---
